<resources>
    <string name="app_name">Personal Reception</string>
    <string name="logo_image">logo image</string>
    <string name="start">CHOOSE \nHOTEL</string>
    <string name="title_activity_my_reception_home">MyReceptionHome</string>
    <string name="title_hotel">Hotel</string>
    <string name="title_services">Services</string>
    <string name="title_places">Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="contacts">Contacts</string>
    <string name="information">Information</string>
    <string name="information_icon">Information Icon</string>
    <string name="contact_icon">Contact icon</string>
    <string name="rooms">Rooms</string>
    <string name="room_types">Room types</string>
    <string name="bars_n_restaurants">Bars /  Restaurants</string>
    <string name="restaurants_bars_icon"><![CDATA[Restaurants & Bars icon]]></string>
    <string name="rooms_icon">Rooms icon</string>
    <string name="your_personal_reception">Your personal reception</string>
    <string name="hotel_fasade">Hotel fasade</string>
    <string name="find_places">FInd places</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_map">Open map</string>
    <string name="search">search</string>
    <string name="hotel_image">Hotel image</string>
    <string name="check_in_code">check-in code</string>
    <string name="login">login</string>
    <string name="room_service">Room service</string>
    <string name="taxi">Taxi</string>
    <string name="food">Food</string>
    <string name="housekeeping">Housekeeping</string>
    <string name="choose_where_you_stay">Choose where you stay</string>
    <string name="restaurants">Restaurants</string>
    <string name="map_bookmarks">Map bookmarks</string>
    <!--https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=CnRvAAAAwMpdHeWlXl-lH0vp7lez4znKPIWSWvgvZFISdKx45AwJVP1Qp37YOrH7sqHMJ8C-vBDC546decipPHchJhHZL94RcTUfPa1jWzo-rSHaTlbNtjh-N68RkcToUCuY9v2HNpo5mziqkir37WU8FJEqVBIQ4k938TI3e7bf8xq-uwDZcxoUbO_ZJzPxremiQurAYzCTwRhE_V0&sensor=false&key=AIzaSyBIHhoW2xSzuAmUstDMfJKbRuXLnFJSAtg-->
</resources>
