<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/login_hotel_name"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/logo_image"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/login_code_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/check_in_code"
            android:inputType="text"
            android:padding="15dp"/>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/background_light"/>

    </LinearLayout>
</LinearLayout>