<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              android:orientation="vertical"
              tools:context=".view.fragment.HotelFragment">


    <LinearLayout
        android:id="@+id/services_fragment_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/services_fragment_hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="HotelName"
            android:textColor="@android:color/white"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/unknown_male"/>

        <TextView
            android:id="@+id/services_fragment_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="Nikita Zhevnitskiy"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/services_fragment_screen_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView1"
                    style="@style/iconScreenNavigation"
                    android:contentDescription="@string/room_service"
                    app:srcCompat="@drawable/ic_bell"/>

                <TextView
                    android:id="@+id/textView1"
                    style="@style/txtScreenNavigation"
                    android:text="@string/room_service"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/iconScreenNavigation"
                    android:contentDescription="@string/taxi"
                    app:srcCompat="@drawable/ic_taxi_cab"/>

                <TextView
                    android:id="@+id/textView2"
                    style="@style/txtScreenNavigation"
                    android:text="@string/taxi"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView3"
                    style="@style/iconScreenNavigation"
                    android:contentDescription="@string/food"
                    app:srcCompat="@drawable/ic_meal"/>

                <TextView
                    android:id="@+id/textView3"
                    style="@style/txtScreenNavigation"
                    android:text="@string/food"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/iconScreenNavigation"
                    android:contentDescription="@string/housekeeping"
                    app:srcCompat="@drawable/ic_vacuum_cleaner_house"/>

                <TextView
                    android:id="@+id/textView4"
                    style="@style/txtScreenNavigation"
                    android:text="@string/housekeeping"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>